--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "react": "18.1.0",
+    "react-hook-form": "^7.39.5",
     "react-native": "0.70.4",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1"
