--- a/package.json
+++ b/package.json
@@ -10,18 +10,17 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
-    "expo": "^47.0.0",
-    "expo-camera": "~13.0.0",
     "react": "18.1.0",
     "react-hook-form": "^7.39.5",
     "react-native": "0.70.4",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-video": "^5.2.1",
     "react-native-image-picker": "^4.10.1",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
